--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,28 @@
   "scripts": {
     "dev": "nodemon index.js"
   },
+  "nodemonConfig": { "ext": "js", "ignore": ["db.json"], "delay": 2 },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-koa": "^2.22.2",
+    "apollo-upload-client": "^14.1.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "graphql-upload": "^11.0.0",
+    "koa": "^2.13.1",
+    "lowdb": "^1.0.0",
+    "mkdirp": "^1.0.4",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "shortid": "^2.2.16",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
