--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game1",
+  "name": "bc",
   "version": "1.22.10",
   "private": true,
   "dependencies": {
@@ -19,7 +19,9 @@
     "ahooks": "^2.8.1",
     "apollo": "^2.32.5",
     "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
     "apollo-codegen": "^0.20.2",
+    "apollo-upload-client": "^14.1.3",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -40,6 +42,7 @@
     "react": "17.0.1",
     "react-apollo": "3.1.5",
     "react-dom": "17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "shortid": "2.2.15",
@@ -71,6 +74,7 @@
     ]
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^14.1.0",
     "@typescript-eslint/eslint-plugin": "4.6.2-alpha.1",
     "@typescript-eslint/parser": "4.15.0",
     "eslint-import-resolver-typescript": "2.3.0"
